SERVER-29383 When catchUpTimeoutMillis is 0, we should skip doing catchup entirely